--- a/logstash-documentation.adoc
+++ b/logstash-documentation.adoc
@@ -18,3 +18,4 @@
 = RedBorder Vault documentation
 
 include::chapters/{i18n}/01-introduction.adoc[]
+include::chapters/{i18n}/02-logstash-internals.adoc[]
