Add data processing chapter

--- a/logstash-documentation.adoc
+++ b/logstash-documentation.adoc
@@ -19,3 +19,4 @@
 
 include::chapters/{i18n}/01-introduction.adoc[]
 include::chapters/{i18n}/02-vault-internals.adoc[]
+include::chapters/{i18n}/03-data-processing.adoc[]
